五个调查设置设置界面菜单栏上添加按钮，并实现对应的简单逻辑；切换用户时的缓存校验；修改应用名称和icon

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,7 +17,7 @@
     <application
         android:name=".AppContext"
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@drawable/icon_subsurvey"
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
