参照开源中国2.8.1版，借鉴调用系统相册/相机选择图片和裁剪功能

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -43,6 +43,11 @@
             android:windowSoftInputMode="stateHidden|stateUnchanged"/>
         <activity android:name=".ui.activity.InfoEditActivity">
         </activity>
+        <activity
+            android:name=".media.SelectImageActivity"
+            android:theme="@style/AppTheme.MyNoActionBar">
+        </activity>
+        <activity android:name=".media.crop.CropActivity"/>
     </application>
 
 </manifest>
