--- a/app/build.gradle
+++ b/app/build.gradle
@@ -56,5 +56,6 @@ dependencies {
     compile 'com.github.bumptech.glide:okhttp3-integration:1.4.0@aar'
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:cardview-v7:25.1.1'
+    compile 'pub.devrel:easypermissions:0.1.7'
 
 }
