用户表增加头像地址字段，修复预览图片Activity无法打开bug

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -48,6 +48,7 @@
             android:theme="@style/AppTheme.MyNoActionBar">
         </activity>
         <activity android:name=".media.crop.CropActivity"/>
+        <activity android:name=".media.ImageGalleryActivity"/>
     </application>
 
 </manifest>
