--- a/app/build.gradle
+++ b/app/build.gradle
@@ -21,21 +21,29 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+    packagingOptions {
+        exclude 'META-INF/LICENSE'
+    }
+}
+
+repositories {
+    maven {
+        url 'https://github.com/uPhyca/stetho-realm/raw/master/maven-repo'
+    }
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile fileTree(include: ['*.jar'], dir: 'libs')
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-
     //retrofit
     //rxjava
     //rxlifecycle
     //gson
     //Glide
     //    compile files('libs/tbs_sdk_thirdapp_v2.2.0.1096_36549_sharewithdownload_withoutGame_obfs_20160830_211645.jar')
-//    compile files('libs/joda-time-2.2.jar')
+    //    compile files('libs/joda-time-2.2.jar')
     compile 'com.android.support:appcompat-v7:25.1.1'
     compile 'com.android.support:support-v4:25.1.1'
     compile 'com.android.support:design:25.1.1'
@@ -44,6 +52,7 @@ dependencies {
     compile 'com.squareup.retrofit2:retrofit:2.0.2'
     compile 'com.squareup.okhttp3:logging-interceptor:3.1.2'
     compile 'com.squareup.okhttp3:okhttp-urlconnection:3.2.0'
+    //    compile 'com.facebook.stetho:stetho-okhttp3:1.4.2'
     compile 'com.squareup.retrofit2:converter-gson:2.0.0-beta4'
     compile 'com.squareup.retrofit2:adapter-rxjava:2.0.2'
     compile 'io.reactivex:rxjava:1.1.0'
@@ -57,5 +66,10 @@ dependencies {
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:cardview-v7:25.1.1'
     compile 'pub.devrel:easypermissions:0.1.7'
-
+    compile 'io.realm:realm-android:0.84.1'
+    //    compile 'io.realm:realm-gradle-plugin:2.1.1'
+    compile 'com.facebook.stetho:stetho:1.4.2'
+    compile 'com.uphyca:stetho_realm:0.9.0'
+    compile files('libs/poi-3.12-android-a.jar')
+    compile files('libs/poi-ooxml-schemas-3.12-20150511-a.jar')
 }
