--- a/app/build.gradle
+++ b/app/build.gradle
@@ -66,10 +66,11 @@ dependencies {
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:cardview-v7:25.1.1'
     compile 'pub.devrel:easypermissions:0.1.7'
+//    compile 'io.realm:realm-gradle-plugin:3.0.0'
     compile 'io.realm:realm-android:0.84.1'
     //    compile 'io.realm:realm-gradle-plugin:2.1.1'
     compile 'com.facebook.stetho:stetho:1.4.2'
-    compile 'com.uphyca:stetho_realm:0.9.0'
+//    compile 'com.uphyca:stetho_realm:0.9.0'
     compile files('libs/poi-3.12-android-a.jar')
     compile files('libs/poi-ooxml-schemas-3.12-20150511-a.jar')
 }
