--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,4 +1,5 @@
 apply plugin: 'com.android.application'
+apply plugin: 'realm-android'
 
 android {
     compileSdkVersion 25
@@ -36,14 +37,9 @@ dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
+        exclude group: 'com.squareup', module: 'javawriter'
     })
-    //retrofit
-    //rxjava
-    //rxlifecycle
-    //gson
-    //Glide
-    //    compile files('libs/tbs_sdk_thirdapp_v2.2.0.1096_36549_sharewithdownload_withoutGame_obfs_20160830_211645.jar')
-    //    compile files('libs/joda-time-2.2.jar')
+
     compile 'com.android.support:appcompat-v7:25.1.1'
     compile 'com.android.support:support-v4:25.1.1'
     compile 'com.android.support:design:25.1.1'
@@ -66,8 +62,7 @@ dependencies {
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:cardview-v7:25.1.1'
     compile 'pub.devrel:easypermissions:0.1.7'
-//    compile 'io.realm:realm-gradle-plugin:3.0.0'
-    compile 'io.realm:realm-android:0.84.1'
+//    compile 'io.realm:realm-android:0.84.1'
     //    compile 'io.realm:realm-gradle-plugin:2.1.1'
     compile 'com.facebook.stetho:stetho:1.4.2'
 //    compile 'com.uphyca:stetho_realm:0.9.0'
