--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,6 +21,14 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <meta-data
+            android:name="UMENG_APPKEY"
+            android:value="5951229f8f4a9d5678000c3f">
+        </meta-data>
+        <meta-data
+            android:name="UMENG_MESSAGE_SECRET"
+            android:value="6dcafcc765d51582ff32fe50ba0a6ba7">
+        </meta-data>
         <activity
             android:name=".ui.activity.MainActivity"
             android:label="@string/app_name"
