修改BaseListFragment不能正常加载EmptyLayout的bug，可能是用错修改后的自定义控件所致...修改魅蓝note无法加载realm64的错误（本地删除）

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,7 +25,9 @@ android {
     }
     packagingOptions {
         exclude 'META-INF/LICENSE'
+        exclude "lib/arm64-v8a/librealm-jni.so"
     }
+
 }
 
 repositories {
@@ -70,4 +72,5 @@ dependencies {
 //    compile 'com.uphyca:stetho_realm:0.9.0'
     compile files('libs/poi-3.12-android-a.jar')
     compile files('libs/poi-ooxml-schemas-3.12-20150511-a.jar')
+    compile 'org.greenrobot:eventbus:3.0.0'
 }
